force-app/main/default/objects/Account/fields/Account_Name2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name2__c</fullName>
    <label>Account Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>