force-app/main/default/objects/Account/fields/Account_Name3__c.field-meta.xml
<CustomField>
    <fullName>Account_Name3__c</fullName>
    <label>Account Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>