force-app/main/default/objects/Account/fields/Account_Name4__c.field-meta.xml
<CustomField>
    <fullName>Account_Name4__c</fullName>
    <label>Account Name 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>