force-app/main/default/objects/Account/fields/EC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>