force-app/main/default/objects/Account/fields/EC_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Billing_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Billing Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>