force-app/main/default/objects/Account/fields/EC_BillToAddress__c.field-meta.xml
<CustomField>
    <fullName>EC_BillToAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Harsha:06/25/19:This field specifies the Bill To Address a Ship To account is related to.</description>
    <label>Bill To Address</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>