force-app/main/default/objects/Account/fields/EC_CDM_Account__c.field-meta.xml
<CustomField>
    <fullName>EC_CDM_Account__c</fullName>
    <description>US-74958:Raghav:26/06/2019:This field will be used for mapping between CDM and account object.</description>
    <externalId>true</externalId>
    <label>External Account Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>