force-app/main/default/objects/Account/fields/EC_CorporateCDMKey__c.field-meta.xml
<CustomField>
    <fullName>EC_CorporateCDMKey__c</fullName>
    <externalId>true</externalId>
    <label>EC_CorporateCDMKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>