force-app/main/default/objects/Account/fields/EC_Division__c.field-meta.xml
<CustomField>
    <fullName>EC_Division__c</fullName>
    <description>Harsha:06/18/19:This field specifies the division that a Ship To account is related to.</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institutional</fullName>
                <label>INSTITUTIONAL</label>
            </value>
            <value>
                <fullName>WATER</fullName>
            </value>
            <value>
                <fullName>PAPER</fullName>
            </value>
            <value>
                <fullName>FOOD &amp; BEVERAGE</fullName>
            </value>
            <value>
                <fullName>ENERGY</fullName>
            </value>
            <value>
                <fullName>F&amp;B</fullName>
                <isActive>false</isActive>
                <label>F&amp;B</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
                <isActive>false</isActive>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>OTHER DIVISIONS</fullName>
                <isActive>false</isActive>
                <label>OTHER DIVISIONS</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <isActive>false</isActive>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>Pest</fullName>
                <isActive>false</isActive>
                <label>Pest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>