force-app/main/default/objects/Account/fields/EC_PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>EC_PaymentMode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>BOTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>