force-app/main/default/objects/Account/fields/EC_SalesRepresentative__c.field-meta.xml
<CustomField>
    <fullName>EC_SalesRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Harsha:07/09/19:The Sales Rep user related to the Sold to Account</description>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>