force-app/main/default/objects/Account/fields/EC_ShipToNumber__c.field-meta.xml
<CustomField>
    <fullName>EC_ShipToNumber__c</fullName>
    <formula>RIGHT(EC_Account_Number__c,(LEN(EC_Account_Number__c)-FIND(&quot;/&quot;, EC_Account_Number__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShipToNumber</label>
    <type>Text</type>
</CustomField>