force-app/main/default/objects/Account/fields/EC_Status__c.field-meta.xml
<CustomField>
    <fullName>EC_Status__c</fullName>
    <description>Harsha:06/27/19:This field determines if an account us active and inactive</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>