force-app/main/default/objects/Account/fields/EC_Unique_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Unique_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Unique Account Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>