force-app/main/default/objects/Account/fields/Payment_Portal_access__c.field-meta.xml
<CustomField>
    <fullName>Payment_Portal_access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Portal access</label>
    <type>Checkbox</type>
</CustomField>