force-app/main/default/objects/Account/fields/second_email__c.field-meta.xml
<CustomField>
    <fullName>second_email__c</fullName>
    <label>second email</label>
    <type>Email</type>
</CustomField>