force-app/main/default/objects/Account/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <formula>if(
        NOT(ISNULL(Account_Name2__c)|| ISBLANK(Account_Name2__c)) &amp;&amp;
        NOT(ISNULL(Account_Name3__c) || ISBLANK(Account_Name3__c)) &amp;&amp;
        NOT(ISNULL(Account_Name4__c) || ISBLANK(Account_Name4__c) ),
        Account_Name2__c+&apos;, &apos;+Account_Name3__c+&apos;, &apos;+Account_Name4__c,
                    IF( (ISNULL(Account_Name2__c)|| ISBLANK(Account_Name2__c)) &amp;&amp; (ISNULL(Account_Name3__c) || ISBLANK(Account_Name3__c)),
                                 Account_Name4__c,
                                  IF(( ISNULL(Account_Name3__c)|| ISBLANK(Account_Name3__c)) &amp;&amp; (ISNULL(Account_Name4__c) || ISBLANK(Account_Name4__c)),
                                                    Account_Name2__c,
                                                     IF((ISNULL(Account_Name4__c)|| ISBLANK(Account_Name4__c)) &amp;&amp; (ISNULL(Account_Name2__c) || ISBLANK(Account_Name2__c)),
                                                                    Account_Name3__c,
                                                                     IF(ISNULL(Account_Name2__c)||ISBLANK(Account_Name2__c),
                                                                                Account_Name3__c+&apos;, &apos;+Account_Name4__c,
                                                                                     IF(ISNULL(Account_Name3__c) || ISBLANK(Account_Name3__c),
                                                                                                    Account_Name2__c+&apos;, &apos;+Account_Name4__c,
                                                                                                     IF(ISNULL(Account_Name4__c) || ISBLANK(Account_Name4__c),
                                                                                                                    Account_Name2__c+&apos;, &apos;+Account_Name3__c,&apos;&apos;
                                                                                                          )
                                                                                          )
                                                                                    )
                                                          )
                                          )
                      )
            )</formula>
    <label>Ship To Name</label>
    <type>Text</type>
</CustomField>