force-app/main/default/objects/Account/recordTypes/EC_Corporate.recordType-meta.xml
<RecordType>
    <fullName>EC_Corporate</fullName>
    <active>true</active>
    <label>Corporate</label>
</RecordType>