force-app/main/default/objects/Account/recordTypes/EC_ShipTo.recordType-meta.xml
<RecordType>
    <fullName>EC_ShipTo</fullName>
    <active>true</active>
    <label>Ship To</label>
</RecordType>