force-app/main/default/objects/Account/recordTypes/EC_SoldTo.recordType-meta.xml
<RecordType>
    <fullName>EC_SoldTo</fullName>
    <active>true</active>
    <label>Sold To</label>
</RecordType>